--- a/gui/index.html
+++ b/gui/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Interface moderna para automação de envio de emails via Roundcube webmail">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="drag.css">
+    <link rel="stylesheet" href="components.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
@@ -190,6 +191,20 @@
                         <p class="mode-description">Baseado em arquivos na pasta</p>
                     </button>
 
+                    <button class="mode-option" data-mode="send-to-contacts" id="modeSendToContacts">
+                        <div class="mode-icon">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="9" cy="7" r="4"></circle>
+                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                <path d="M22 11l-8.5 8.5L11 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="transform: translate(4px, -4px);"/>
+                            </svg>
+                        </div>
+                        <h3 class="mode-title">Enviar aos Contatos</h3>
+                        <p class="mode-description">Enviar email para contatos salvos</p>
+                    </button>
+
                     <button class="mode-option" data-mode="contacts" id="modeContacts">
                         <div class="mode-icon">
                             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -199,8 +214,20 @@
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                             </svg>
                         </div>
-                        <h3 class="mode-title">Contatos</h3>
-                        <p class="mode-description">Gerenciar lista de emails</p>
+                        <h3 class="mode-title">Gerenciar Contatos</h3>
+                        <p class="mode-description">Adicionar/remover contatos</p>
+                    </button>
+
+                    <button class="mode-option" data-mode="templates" id="modeTemplates">
+                        <div class="mode-icon">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="currentColor" stroke-width="2"/>
+                                <polyline points="14 2 14 8 20 8" stroke="currentColor" stroke-width="2"/>
+                                <line x1="16" y1="13" x2="8" y2="13" stroke="currentColor" stroke-width="2"/>
+                            </svg>
+                        </div>
+                        <h3 class="mode-title">Templates</h3>
+                        <p class="mode-description">Criar e gerenciar templates</p>
                     </button>
                 </div>
             </section>
@@ -235,7 +262,18 @@
                             </svg>
                             Destinatário
                         </label>
-                        <input type="email" id="recipient" class="form-input" placeholder="destinatario@exemplo.com">
+                        <div class="input-with-contacts">
+                            <input type="email" id="recipient" class="form-input" placeholder="destinatario@exemplo.com">
+                            <button type="button" class="btn-contacts" id="btnSelectContact" title="Escolher dos contatos salvos">
+                                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 18px; height: 18px;">
+                                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                    <circle cx="9" cy="7" r="4"></circle>
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                </svg>
+                                <span>Contatos</span>
+                            </button>
+                        </div>
                     </div>
 
                     <div class="form-group full-width">
@@ -542,6 +580,100 @@ Equipe</textarea>
                 </div>
             </section>
 
+            <!-- Send to Contacts Mode -->
+            <section class="card email-form-card hidden" id="sendToContactsSection">
+                <div class="card-header">
+                    <div class="card-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="9" cy="7" r="4"></circle>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            <path d="M22 11l-8.5 8.5L11 17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="transform: translate(4px, -4px);"/>
+                        </svg>
+                    </div>
+                    <div>
+                        <h2 class="card-title">Enviar aos Contatos</h2>
+                        <p class="card-description">Selecione os contatos e envie o email</p>
+                    </div>
+                </div>
+
+                <div class="send-contacts-container" style="padding: 1.5rem;">
+                    <!-- Seleção de Contatos -->
+                    <div class="form-group full-width" style="margin-bottom: 1.5rem;">
+                        <label class="form-label">
+                            <svg class="label-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="9" cy="7" r="4"></circle>
+                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                            </svg>
+                            Selecionar Contatos
+                        </label>
+                        <div class="contacts-selection-area" id="contactsSelectionArea" style="border: 1px solid var(--color-border); border-radius: 8px; padding: 1rem; background: var(--color-bg-secondary);">
+                            <div class="contacts-select-all" style="margin-bottom: 1rem; padding-bottom: 0.5rem; border-bottom: 1px solid var(--color-border);">
+                                <label style="display: flex; align-items: center; gap: 0.5rem; cursor: pointer;">
+                                    <input type="checkbox" id="selectAllContacts" style="width: 18px; height: 18px;">
+                                    <span>Selecionar todos os contatos</span>
+                                </label>
+                            </div>
+                            <div id="contactsCheckboxes" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 0.75rem;">
+                                <!-- Checkboxes serão inseridos via JS -->
+                            </div>
+                            <div id="noContactsForSend" class="empty-state" style="text-align: center; padding: 2rem; color: var(--color-text-secondary);">
+                                <p>Nenhum contato cadastrado. <a href="#" onclick="switchMode('contacts'); return false;" style="color: var(--color-primary);">Adicione contatos aqui</a>.</p>
+                            </div>
+                        </div>
+                        <div id="selectedContactsCount" style="margin-top: 0.5rem; font-size: 0.9rem; color: var(--color-text-secondary);">
+                            Nenhum contato selecionado
+                        </div>
+                    </div>
+
+                    <!-- Formulário do Email -->
+                    <div class="form-grid">
+                        <div class="form-group full-width">
+                            <label for="sendToContactsSubject" class="form-label">
+                                <svg class="label-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 8H17M7 12H17M7 16H12" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                Assunto
+                            </label>
+                            <input type="text" id="sendToContactsSubject" class="form-input" placeholder="Digite o assunto do email">
+                        </div>
+
+                        <div class="form-group full-width">
+                            <label for="sendToContactsMessage" class="form-label">
+                                <svg class="label-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M8 10H16M8 14H11M6 21H18C19.1046 21 20 20.1046 20 19V5C20 3.89543 19.1046 3 18 3H6C4.89543 3 4 3.89543 4 5V19C4 20.1046 4.89543 21 6 21Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                Mensagem
+                            </label>
+                            <textarea id="sendToContactsMessage" class="form-textarea" rows="6" placeholder="Digite a mensagem do email..."></textarea>
+                        </div>
+
+                        <div class="form-group full-width">
+                            <label for="sendToContactsAttachment" class="form-label">
+                                <svg class="label-icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15.172 7L20.414 12.242C21.195 13.023 21.195 14.291 20.414 15.072L15.072 20.414C14.291 21.195 13.023 21.195 12.242 20.414L3.51472 11.6868C2.73367 10.9057 2.73367 9.63769 3.51472 8.85664L8.85786 3.51351C9.63891 2.73246 10.9069 2.73246 11.688 3.51351L15.172 7ZM15.172 7L18.364 3.808C19.145 3.027 20.413 3.027 21.194 3.808C21.975 4.589 21.975 5.857 21.194 6.638L18.002 9.83" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                Anexo (opcional)
+                            </label>
+                            <div class="file-input-wrapper">
+                                <input type="file" id="sendToContactsAttachment" class="file-input" multiple>
+                                <label for="sendToContactsAttachment" class="file-input-label">
+                                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M7 18C7 19.1046 7.89543 20 9 20H15C16.1046 20 17 19.1046 17 18V9C17 7.89543 16.1046 7 15 7H9C7.89543 7 7 7.89543 7 9V18Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                        <path d="M14 7V5C14 3.89543 13.1046 3 12 3C10.8954 3 10 3.89543 10 5V7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                    <span>Escolher arquivo(s)</span>
+                                </label>
+                                <span class="file-name" id="sendToContactsFileName">Nenhum arquivo selecionado</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Contacts Mode -->
             <section class="card email-form-card hidden" id="contactsSection">
                 <div class="card-header">
@@ -585,6 +717,28 @@ Equipe</textarea>
                         style="text-align: center; padding: 2rem; color: var(--color-text-secondary);">
                         <p>Nenhum contato cadastrado ainda.</p>
                     </div>
+                </div>
+            </section>
+
+            <!-- Templates Mode -->
+            <section class="card email-form-card hidden" id="templatesSection">
+                <div class="card-header">
+                    <div class="card-icon">
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" stroke="currentColor" stroke-width="2"/>
+                            <polyline points="14 2 14 8 20 8" stroke="currentColor" stroke-width="2"/>
+                            <line x1="16" y1="13" x2="8" y2="13" stroke="currentColor" stroke-width="2"/>
+                            <line x1="16" y1="17" x2="8" y2="17" stroke="currentColor" stroke-width="2"/>
+                        </svg>
+                    </div>
+                    <div>
+                        <h2 class="card-title">Templates de Email</h2>
+                        <p class="card-description">Crie e gerencie templates reutilizáveis com variáveis dinâmicas</p>
+                    </div>
+                </div>
+
+                <div id="templatesContainer" style="padding: 1.5rem;">
+                    <!-- Preenchido via JS -->
                 </div>
             </section>
 
@@ -710,7 +864,18 @@ Equipe</textarea>
         </div>
     </div>
 
+    <!-- New Components -->
+    <script src="toast.js"></script>
+    <script src="progress.js"></script>
+    <script src="validation.js"></script>
+    <script src="templates.js"></script>
+    <script src="preview.js"></script>
+    
+    <!-- Main Script -->
     <script src="script.js"></script>
+    
+    <!-- Integration Layer (must be last) -->
+    <script src="integration.js"></script>
 </body>
 
 </html>
